Fixed overflow when too many bars are open

--- a/static/environment.css
+++ b/static/environment.css
@@ -40,6 +40,7 @@ aside {
     flex-basis: 25%;
     flex-grow: 1;
     background-color: #0B0C10;
+    overflow: auto;
 }
 
 .wrapper {
